# llm-biases

./: .gitignore  CLAUDE.md  README.md  analyse.py  fingerprint.py  main.py  pyproject.toml  records.py  visualise.py
.github/workflows/: ci.yml
evals/: __init__.py  characters.py  numbers.py
examples/: README.md  all-models-2026-07-16.html  all-models-brief.html  claude-family-2026-07-16.html  claude-family-2026-07-16.jsonl  claude-family-2026-07-16.panel.txt  gpt-5.6-family-2026-07-15.html  gpt-5.6-family-2026-07-15.jsonl  gpt-5.6-family-2026-07-15.panel.txt  trials_20260715_210335.jsonl  trials_openrouter.html  trials_openrouter.jsonl  trials_openrouter.panel.txt
tests/: test_matcher.py
