[project]
name = "llm-biases"
version = "0.1.0"
description = "Measures LLM preference biases: sycophancy, position effects and odder tendencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.92.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
